# cam-location-addressing-feature-service-etl

./: .dockerignore  .env-template  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  main.py  main_delete_lalf_geocodes.py  main_delete_location_addressing.py  main_load_lalf_geocodes.py  main_pls.py  main_seed_pls_geocodes_db.py  pyproject.toml
.github/workflows/: release.yml
address_etl/: address_concat.py  address_current_staging_table.py  address_iri_pid_map.py  address_iris.py  address_rows.py  address_tables.py  create_tables.py  crud.py  dynamodb_lock.py  esri_rest_api.py  geocode.py  geocode_load.py  geocode_table.py  get_address_concatenation.py  get_address_iris.py  get_rows.py  id_map.py  kafka.py  metadata.py  populate_geocode_table.py  s3.py  settings.py  sqlite_dict_factory.py  table_diff.py  table_row_hash.py  tables.py  time_convert.py  write_address_current_staging_rows.py
address_etl/pls/: debug_parcels.py  diff_and_sync.py  tables.py
address_etl/pls/queries/: address.py  local_auth.py  locality.py  parcel.py  place_name.py  road.py  site.py
pls/: definitions.json
tests/: conftest.py  test_address_concat.py  test_address_concatenation.py  test_address_iri_pid_map.py  test_address_query_templates.py  test_create_tables.py  test_geocode_join.py  test_geocode_schema.py  test_get_address_iris.py  test_id_map.py  test_insert_addresses_into_esri.py  test_insert_geocodes.py  test_kafka.py  test_main_pls_kafka.py  test_pls_address_pid_flow.py  test_row_hash.py  test_settings.py  test_table_diff.py  test_time_convert.py
tests/test_query/: conftest.py  shiro.ini  test_address_query.py
tests/test_s3/: conftest.py  test_get_latest_file.py  test_s3_list.py  test_s3_sqlite.py
