[project]
name = "address_etl"
version = "0.1.0"
description = "ETL for the location address feature service."
authors = [
    { name="Edmond Chuc", email="edmond@kurrawong.ai" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.9.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]
