[project]
name = "address_etl"
version = "0.1.0"
description = "ETL for the location address feature service."
authors = [
    { name="Edmond Chuc", email="edmond@kurrawong.ai" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "boto3>=1.38.23",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
    "testcontainers>=4.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]
